--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     <optgroup label="Spanish">
                         <option value="es-US">US Spanish (es-US)</option>
                     </optgroup>
+                    <optgroup label="Japanese">
+                        <option value="ja-JP">Japanese (ja-JP)</option>
+                    </optgroup>
                 </select>
 
                 <label>Region:</label>
